# Sahan-Rudrigo-Crowd-Estimation-for-Disaster-Recovery-

./: .gitignore  README.md  pyproject.toml  requirements.txt
apps/: run_tracking.py
config/: cameras.yaml
dashboard/: panic_ui.py  state_writer.py  ui.py
scripts/: train_panic_baseline.py
scripts/tools/: calibrate.py  set_door_line.py  verify_calibration.py
services/: describer_api.py  describer_local.py
src/disaster_recovery/: __init__.py
src/disaster_recovery/apps/: run_tracking.py
src/disaster_recovery/core/: detector.py  global_registry.py  line_counter.py  matcher.py  reid.py  reid_model.py  tracker.py
src/disaster_recovery/dashboard/: panic_ui.py  state_writer.py  ui.py
src/disaster_recovery/panic/: panic_detector.py
src/disaster_recovery/scripts/: train_panic_baseline.py
src/disaster_recovery/scripts/tools/: calibrate.py  set_door_line.py  verify_calibration.py
src/disaster_recovery/services/: describer_api.py  describer_local.py
src/disaster_recovery/tools/: homography.py
tests/: test_cuda.py  test_panic_detection.py
